###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "abseil-cpp", version = "20240116.2")

bazel_dep(name = "glog", version = "0.7.0")

bazel_dep(name = "gflags", version = "2.2.2")

bazel_dep(name = "googletest", version = "1.14.0")

bazel_dep(name = "google_benchmark", version = "1.8.3")